// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ConfigTestCases compiletime exports-presence-overrides exports-presence-overrides should compile: errors 1`] = `
Array [
  Object {
    "loc": "4:25-29",
    "message": "export 'NoNo' (imported as 'NoNo') was not found in '../stub' (possible exports: default)",
    "moduleName": "./eee/index.js",
  },
  Object {
    "loc": "2:0-34",
    "message": "export 'NotHere' (reexported as 'NotHere') was not found in '../stub' (possible exports: default)",
    "moduleName": "./fff/index.js",
  },
]
`;

exports[`ConfigTestCases compiletime exports-presence-overrides exports-presence-overrides should compile: warnings 1`] = `
Array [
  Object {
    "loc": "2:0-34",
    "message": "export 'NotHere' (reexported as 'NotHere') was not found in '../stub' (possible exports: default)",
    "moduleName": "./eee/index.js",
  },
]
`;
